# NetDevOps-demo

./: .gitignore  README.md  configure_all.py  gns3_build_topology.py  one_shot_config.py  pyproject.toml
gns3_topology/: devices.yaml
inventory/: config.yaml
script/NXOS/: lib_nxos_task_list.py  replacement
